--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^7.10.0",
     "@sanity/vision": "^3.93.0",
+    "dotenv": "^17.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.93.0",
